parser/src/test/resources/corpus/valid/20_let_arithmetic.ff
rule "Let Arithmetic" {
  let total = a + b - c
  let scaled = base * 2
  let ratio = numerator / denominator
}
