parser/src/test/resources/corpus/invalid/43_dual_operator.ff
rule "Dual Operator" {
  let x = a ++ b
}
